# systemy-wbudowane-1

./: CMakeList.txt  CMakeLists.txt  README.md  Smieszny_Program_Jonasza  adam.txt  appV1  czesc.txt  main  main.cpp  main1529559.cpp  main2.cpp  main69.cpp  poradnik.txt  test
commands/: AnnaNowak_command.cpp  BartoszWojciechowski_command.cpp  CMakeCache.txt  DanielWyrwal2_command.cpp  DanielWyrwal_command.cpp  JanKowalski_command.cpp  JerzyMankowskiSequel_command.cpp  JerzyMankowski_command.cpp  JonaszKoryl_command.cpp  MarcelKaczmarczyk_command.cpp  MarcinKociolek_command.cpp  MateuszStodolny_command.cpp  NatanSzymanski_command.cpp  PiotrKrzyzaniak2_command.cpp  TomaszWalkiewicz_command.cpp
include/: command.h
src/: CMakeCache.txt  command.cpp  main.cpp
